# SceneDesigner

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/designer/: CMakeLists.txt  designer.cpp  designer.h  designer.ui  designerview.cpp  designerview.h  lenjonsim.cpp  lenjonsim.h  main.cpp  scene.cpp  scene.h  scenesampler.cpp  scenesampler.h  scenesampler.ui  scenesaver.cpp  scenesaver.h
